multiqueue: ensure thread safety when adding a pad

This seems to be a regression, and was causing crashes.

https://bugzilla.gnome.org/show_bug.cgi?id=649878